@@ -1,0 +1,40 @@
+// Copyright (c) 2001,2004  Utrecht University (The Netherlands),
+// ETH Zurich (Switzerland), Freie Universitaet Berlin (Germany),
+// INRIA Sophia-Antipolis (France), Martin-Luther-University Halle-Wittenberg
+// (Germany), Max-Planck-Institute Saarbruecken (Germany), RISC Linz (Austria),
+// and Tel-Aviv University (Israel).  All rights reserved.
+//
+// This file is part of CGAL (www.cgal.org); you can redistribute it and/or
+// modify it under the terms of the GNU Lesser General Public License as
+// published by the Free Software Foundation; version 2.1 of the License.
+// See the file LICENSE.LGPL distributed with CGAL.
+//
+// Licensees holding a valid commercial license may use this file in
+// accordance with the commercial license agreement provided with the software.
+//
+// This file is provided AS IS with NO WARRANTY OF ANY KIND, INCLUDING THE
+// WARRANTY OF DESIGN, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+//
+// $Source$
+// $Revision$ $Date$
+// $Name$
+//
+// Author(s)     : Sylvain Pion
+ 
+#ifndef CGAL_STATIC_FILTERS_TOOLS_H
+#define CGAL_STATIC_FILTERS_TOOLS_H
+
+#include <CGAL/basic.h>
+
+CGAL_BEGIN_NAMESPACE
+
+// Utility function to check a posteriori that a subtraction was performed
+// without rounding error.
+inline bool diff_was_exact(double a, double b, double ab)
+{
+    return ab+b == a && a-ab == b;
+}
+
+CGAL_END_NAMESPACE
+
+#endif // CGAL_STATIC_FILTERS_TOOLS_H
